# rtci

./: .dockerignore  .gitattributes  .gitignore  CNAME  README.md  Untitled-1.ipynb  agency_num_by_state.csv  arima_preds.csv  arima_preds.xlsx  co_state_ucr.Rmd  correlation_matrix.csv  ct_state_UCR.Rmd  data.csv  docker-cleanup.sh  docker-compose.yml  failed_merges.csv  fake.r  knox_returnA_feb24.csv  knox_returnA_jan24.csv  knox_returnA_mar24.csv  mo_state_ucr.Rmd  nat_mean_ci.csv  nv_state_ucr.Rmd  oh_state_ucr.Rmd  pa_state_ucr.Rmd  phoenix_ucr_pdf_processing.Rmd  phx_ucr22.csv  py_test.ipynb  returnA_pdf_processing.Rmd  ri_state_ucr.Rmd  rtci.code-workspace  rtci_extracted.csv  sample_cities_10162024.csv  sample_cities_pop_explore.csv  sd_state_ucr.Rmd  styles.css  tidycensus_2020.Rmd  tx_state_ucr.Rmd
ai/: README.md  pyproject.toml
ai/chatbot/: .gitignore  Dockerfile  README.md  build.sh  deployment.md  import.py  local-dev.yaml  main.py  pyproject.toml
ai/chatbot/docker/: docker-entrypoint.sh
ai/chatbot/rtci/: model.py  rtci.py
ai/chatbot/rtci/agent/: bot.py  crime.py  date.py  location.py
ai/chatbot/rtci/ai/: crime.py  date.py  location.py
ai/chatbot/rtci/prompts/: assistant_analyze.txt  assistant_context.txt  assistant_csv.txt  assistant_help.txt  assistant_profile.txt  assistant_summarize.txt  assistant_validate.txt  crime_hint.txt  crime_rephrase.txt  crime_retrieve.txt  date_hint.txt  location_hint.txt  location_retrieve.txt
ai/chatbot/rtci/util/: cache.py  collections.py  credentials.py  csv.py  data.py  database.py  llm.py  log.py  prompt.py  s3.py
ai/chatbot/tests/: test_bot.py  test_common.py  test_create_teardown.py  test_crime.py  test_data.py  test_dates.py  test_locations.py  test_prompt.py
custom_web_app/: index.html  index_test.html  script.js  script_test.js  styles.css
data/: error_bars_100rep.csv  error_bars_10rep.csv  error_bars_1krep.csv  error_bars_50rep.csv  (+5 more)
(+377 files in other folders)
